syntax = "proto3";

package def.gateway.constants;

option java_package = "com.game.gateway.proto";
option java_outer_classname = "ApiDef";
option java_multiple_files = true;

// 接口列表
enum GATEWAY_APIS {
    EMPTY = 0;
    // 网关接口
    GATEWAY_V1_0_0 = 1;
    // 匹配接口
    MATCHING_V1_0_0 = 2;
    // 房间接口
    GAME_ROOM_V1_0_0 = 3;
    // 自建房间接口
    BUILT_GAME_ROOM_V1_0_0 = 4;
}

// BusinessMessage 定义:
// json:

// 作用域
// gateway_domain_constants.proto
// gateway_error_code_constants.proto
// gateway_methods.proto
// gateway_notify_opcode_constants.proto